test/lattests/extensions/objects1/bad/duplicateFields.lat
class a {
    int x;
    int x;
}